--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</section>
 				<section>
 					<h2>SKILLS</h2>
-                        <p>JAVA, HTML, CSS, GitHub, VS Code...</p>
+                        <p>MS Office, JAVA, HTML, CSS, GitHub, VS Code, Mongol DB, Oracle DB</p>
 					<!-- your skills -->
 				</section>
 				<section>
@@ -70,6 +70,43 @@
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
+
+                        <h3>MAINTENANCE MANAGER/ INFORMATION TECHNOLOGY AND OFFICE ADMINISTRATOR</h3>
+                        <p>
+                                Motel Three | 2020 - 2021
+                        </p>
+                        <p>
+                                Formerly known as Motel One. Well know for having excellent customer service and 
+                                affordable accommodations. A first choice for locals and travelers when it comes to 
+                                spending a night or a month in a motel.
+                        </p>
+                        <ul>
+                                <li>Perform periodic preventive maintenance on pluming, electrical, air-conditioning and 
+                                    heating. 
+                                </li>
+                                <li>Conduct inspections on buildings and infrastructures fixing whenever there’s damage.
+                                </li>
+                                <li>A front desk personnel task with checking in guest. This involves sales skills.</li>                                
+                        </ul>
+
+                        <h3>LOAN SUPPORT</h3>
+                        <p>
+                                Spiritwood Credit Union Ltd. | 2004 - 2018
+                        </p>
+                        <p>
+                                For more than three years, I have two positions in the company. Going back and forth from two 
+                                departments needs flexibility and tremendous adaptability which I enjoyed having the best of 
+                                both worlds.
+                        </p>
+                        <ul>
+                                <li>Making sure the loans are properly inputted in the DNA and matches the loan 
+                                    documents, make necessary corrections. 
+                                </li>
+                                <li> Balancing ATM and clearing cheques. 
+                                </li>
+                                <li>Do a proper PPR searches/registrations; Bank of Canada Searches; Equifax searches and 
+                                    other related searches needed by loans officer in timely manner. </li>
+                        </ul>
                         <h3>BILLING CONSULTANT</h3>
                         <p>
                                 Accenture Philippines | 2007 - 2010
@@ -87,22 +124,6 @@
                                 <li>Undertakes complex reconciliations, and compiles documentation for legal action. </li>
                         </ul>
 
-                        <h3>LOAN SUPPORT</h3>
-                        <p>
-                                Spiritwood Credit Union Ltd. | 2004 - 2018
-                        </p>
-                        <p>
-                                For more than three years, I have two positions in the company. Going back and forth from two 
-                                departments needs flexibility and tremendous adaptability which I enjoyed having the best of 
-                                both worlds.
-                        </p>
-                        <ul>
-                                <li>Making sure the loans are properly inputted in the DNA and matches the loan 
-                                    documents, make necessary corrections. 
-                                </li>
-                                <li>Do a proper PPR searches/registrations; Bank of Canada Searches; Equifax searches and 
-                                    other related searches needed by loans officer in timely manner. </li>
-                        </ul>
 					<!-- your work experience -->
 				</section>
 			</article>
