--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="https://github.com/ensomojo">gh-ensomojo</a>
+                        <a href="https://github.com/ensomojo">github</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="https://www.linkedin.com/in/john-ensomo-350205212/">linkedin-John Ensomo</a>
+                        <a href="https://www.linkedin.com/in/john-ensomo-350205212/">linkedin</a>
                     </p>
 					<!-- contact info including social media -->
 				</section>
@@ -76,7 +76,7 @@
                                 Motel Three | 2020 - 2021
                         </p>
                         <p>
-                                Formerly known as Motel One. Well know for having excellent customer service and 
+                                Formerly known as Motel One. Well known for having excellent customer service and 
                                 affordable accommodations. A first choice for locals and travelers when it comes to 
                                 spending a night or a month in a motel.
                         </p>
